Fix ripple effect on safari and firefox browsers

--- a/src/ui/app/widgets/ek-ink-ripple/ek-ink-ripple.less
+++ b/src/ui/app/widgets/ek-ink-ripple/ek-ink-ripple.less
@@ -21,7 +21,7 @@
                 opacity: 0.4;
                 background-color: @white;
                 transform: translate(-50%, -50%);
-                transition: width 600ms linear, height 600ms linear, opacity 800ms linear;
+                transition: width 300ms linear, height 300ms linear, opacity 400ms linear;
             }
 
             &--dark {
